# mcp-diagram-server

./: .gitignore  Makefile  README.md  diagram_ui.html  mcp_diagram_server.py  mcp_stdio_wrapper.py  pyproject.toml  pytest.ini
doc/: cursor_direct_usage.md  index.md  mcp_compliance.md  sse_usage.md  usage.md  web_ui_usage.md
test/: __init__.py  test_mcp_compliance.py  test_mcp_diagram_server.py  test_mcp_direct.py  test_sse_mode.py
